--- a/inst/NSsamleDok.Rnw
+++ b/inst/NSsamleDok.Rnw
@@ -92,23 +92,24 @@
 \listoffigures
 \newpage
 
-<<"knitrSettings", include=FALSE, echo=FALSE, eval=TRUE>>=
-knitr::opts_chunk$set(fig.align='center', fig.show='hold', out.width='.7\\textwidth',cache=FALSE, fig.path='')
+<<setup, include=FALSE, cache=FALSE>>=
+knitr::opts_chunk$set(warnings=FALSE,echo=FALSE)
+knitr::opts_knit$set(root.dir = './')	#Settes også i rapbase
+knitr::opts_chunk$set(fig.align='center', fig.show='hold', fig.path='', out.width='.7\\textwidth', cache=FALSE)
+options(replace.assign=TRUE, width=90) #, warnings=FALSE, echo=FALSE, fig.align='center', fig.show='hold', out.width='.7\\textwidth', cache=FALSE)
 @
 
-<<"WARNINGLoadSampleDataWARNING", echo=FALSE, eval=TRUE>>=
+<<"WARNINGLoadSampleDataWARNING", echo=FALSE, eval=FALSE>>=
 #load(NorScirSampleData)
 data(NorScirSampleData, package="NorScir")
 NSdata <- NorScirSampleData
-libkat <- './'
 reshID <- 123456
 @
 
-<<'LasteDataDb', include=FALSE, echo=FALSE, eval=FALSE>>=
-NSdata <- NSLoadRegData()
-
-# may be removed?
-libkat <- './'
+<<LasteData, echo=FALSE, eval=T>>=
+if (!exists('NSdata')){
+      NSdata <- NSRegDataSQL()
+}
 @
 
 
@@ -124,19 +125,17 @@ Der har du også mulighet for å lage egne figurer og tabeller.
 \section{Data og nøkkeltall}
 
 <<'Variabeldef og utvalg', results='asis', echo=FALSE>>=
-NSdataAlleSkjema <- NSdata
-#------------NB: Siden vi bare har resultater fra skjema 1 filtreres nå på skjema 1.
-NSdata <- NSdata[which(NSdata$SkjemaID==1), ]
-
-alderVar <- 'AlderAar'
-datoVar <- 'AdmitDt'
-NSdata$InnDato <- as.POSIXlt(NSdata[ ,datoVar], format="%Y-%m-%d")	#"%d.%m.%Y"
+NSdata <- NSPreprosesser(RegData=NSdata)
+#alderVar <- 'AlderAar'
+#datoVar <- 'AdmitDt'
+#NSdata$InnDato <- as.POSIXlt(NSdata[ ,datoVar], format="%Y-%m-%d")	#"%d.%m.%Y"
 NSdata$Aar <- NSdata$InnDato$year+1900
-NSdata$Alder <- NSdata[ ,alderVar]
-ShNavn <- NSdata$ShNavn[which(NSdata$ReshId == reshID)[1]]
+#NSdata$Alder <- NSdata[ ,alderVar]
+#ShNavn <- NSdata$ShNavn[which(NSdata$ReshId == reshID)[1]]
+ShNavn <- as.character(NSdata$ShNavn[match(reshID, NSdata$ReshId)])
 
 #Parametre
-sml <- 1		#Sammenligne med resten av landet eller ikke. Ikke aktiv når hele landet valgt.
+#sml <- 1		#Sammenligne med resten av landet eller ikke. Ikke aktiv når hele landet valgt.
 minald <- 0
 maxald <- 120
 erMann <- ''	#...
@@ -145,7 +144,7 @@ AIS <- ''
 datoFra <- '2010-01-01'	#Standard: 0, dvs. alle år
 datoTil <- '2050-05-25'
 #reshID - gis fra Jasper	##105593-Haukeland, 106896-Sunnaas sykehus, 107627-St.Olavs, standard: 'Alle'
-plotType='S'
+#plotType='S'
 s1 <- 0.66	#Skaleringsparameter for enkeltfigurer
 #s2 <- 0.7	#Skaleringsparameter for "dobbeltfigurer"
 ## next line not needed
@@ -153,8 +152,7 @@ s1 <- 0.66	#Skaleringsparameter for enkeltfigurer
 
 #Utvalg/datarensk
 Ninn <- dim(NSdata)[1]
-Utvalg <- NorScir::NSLibUtvalg(RegData=NSdata, datoFra=datoFra,
-                               datoTil=datoTil)
+Utvalg <- NSUtvalg(RegData=NSdata, datoFra=datoFra, datoTil=datoTil)
 NSdata <- Utvalg$RegData
 NSdataEget <- NSdata[NSdata$ReshId == reshID,]
 
@@ -162,7 +160,7 @@ NSdataEget <- NSdata[NSdata$ReshId == reshID,]
 Ntot <- dim(NSdata)[1]
 #Nskj1 <- length(NSdata$SkjemaID==1)
 Npas <- Ntot #unique(NSdata$PasientID)
-tabKjPst <- round(table(NSdata$isMale)/Npas*100, digits=1)
+tabKjPst <- round(table(NSdata$erMann)/Npas*100, digits=1)
 @
 
 Der annet ikke er angitt, er alle resultater i dette dokumentet basert på innleggelser i perioden
@@ -305,7 +303,7 @@ utvalg <- switch(hvem,
 		St.Olav = which(NSdata$ReshId == 107627))
 
 Nutv <- length(utvalg)
-Kjonn <- table(NSdata$isMale[utvalg])
+Kjonn <- table(NSdata$erMann[utvalg])
 AntTilHjem <- c(sum(NSdata$PlaceDis[utvalg]==1), sum(NSdata$PlaceDis[utvalg] %in% 1:10))
 AntAssSkade <-c(sum(NSdata$isAssocInj[utvalg]==1), sum(NSdata$isAssocInj[utvalg] %in% 0:1))
 AntSpinkir <- c(sum(NSdata$isSpnlSurg[utvalg]==1), sum(NSdata$isSpnlSurg[utvalg] %in% 0:1))
@@ -392,7 +390,7 @@ av data til figurene.
 
 %\begin{figure}[ht]
 %<<FigNevrNivaaInn, echo=FALSE, message=FALSE>>=
-%	FigAndelStabel(NSdata, libkat=libkat, valgtVar='NevrNivaaInn', datoFra=datoFra, datoTil=datoTil,
+%	FigAndelStabel(NSdata, preprosess=0, valgtVar='NevrNivaaInn', datoFra=datoFra, datoTil=datoTil,
 %			minald=minald, maxald=maxald, erMann=erMann, traume=traume, reshID=reshID)	#, sml=sml)
 %@
 %\caption{\label{fig:NevrKatInn} Nevrologisk nivå ved innskriving.}
@@ -400,44 +398,44 @@ av data til figurene.
 
 %\begin{figure}[ht]
 %<<FigNevrNivaaUt, echo=FALSE, message=FALSE>>=
-%	FigAndelStabel(NSdata, libkat=libkat, valgtVar='NevrNivaaUt', datoFra=datoFra, datoTil=datoTil,
+%	FigAndelStabel(NSdata, preprosess=0, valgtVar='NevrNivaaUt', datoFra=datoFra, datoTil=datoTil,
 %			minald=minald, maxald=maxald, erMann=erMann, traume=traume, reshID=reshID)	#, sml=sml)
 %@
 %\caption{\label{fig:NevrKatUt} Nevrologisk nivå ved utskriving}
 %\end{figure}
 
-\begin{figure}[ht]
-\begin{center}
-\scalebox{\Sexpr{s1}}{
-<<FigNevrNivaaInnUtEget, echo=FALSE, message=FALSE>>=
-	NorScir::FigAndelStabel(NSdata,   valgtVar='NevrNivaaInnUt', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, erMann=erMann, traume=traume, enhetsUtvalg=1, reshID=reshID, hentData=0)	#, sml=sml)
-			@
-}
-\caption{\label{fig:NevrKatInnUtEget} Nevrologisk nivå, eget sykehus.}
-\end{center}
-\end{figure}
+%\begin{figure}[ht]
+%\begin{center}
+%\scalebox{\Sexpr{s1}}{
+%<<FigNevrNivaaInnUtEget, echo=FALSE, message=FALSE>>=
+%	FigAndelStabel(NSdata,   valgtVar='NevrNivaaInnUt', datoFra=datoFra, datoTil=datoTil,
+%			minald=minald, maxald=maxald, erMann=erMann, traume=traume, enhetsUtvalg=1, reshID=reshID, hentData=0)	#, sml=sml)
+%			@
+%}
+%\caption{\label{fig:NevrKatInnUtEget} Nevrologisk nivå, eget sykehus.}
+%\end{center}
+%\end{figure}
 
-\begin{figure}[ht]
-  \begin{center}
-\scalebox{\Sexpr{s1}}{
+%\begin{figure}[ht]
+%  \begin{center}
+%\scalebox{\Sexpr{s1}}{
 <<FigNevrNivaaInnUtAlle, echo=FALSE, message=FALSE>>=
-	NorScir::FigAndelStabel(NSdata,   valgtVar='NevrNivaaInnUt', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, erMann=erMann, traume=traume,
-      enhetsUtvalg=0, reshID=0, hentData=0)	#, sml=sml)
+#	FigAndelStabel(NSdata,   valgtVar='NevrNivaaInnUt', datoFra=datoFra, datoTil=datoTil,
+#			minald=minald, maxald=maxald, erMann=erMann, traume=traume,
+#     enhetsUtvalg=0, reshID=0, hentData=0)	#, sml=sml)
 @
-}
-\end{center}
-\caption{\label{fig:NevrKatInnUtLand} Nevrologisk nivå, alle sykehus.}
-\end{figure}
+%}
+%\end{center}
+%\caption{\label{fig:NevrKatInnUtLand} Nevrologisk nivå, alle sykehus.}
+%\end{figure}
 
 
 \begin{figure}[ht]
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigAlder, echo=FALSE, message=FALSE>>=
-	NorScir::FigFordeling(NSdata,   outfile='', valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   outfile='', valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
 \caption{\label{fig:Alder} Aldersfordeling}
@@ -449,8 +447,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigOpphTot, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{\label{fig:OpphTot} Liggetid for alle registrerte}
@@ -462,8 +460,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerTilRehab, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{\label{fig:DagerTilRehab} Antall døgn før spesialisert rehabilitering}
@@ -475,8 +473,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerRehab, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
-			traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
+			traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{\label{fig:DagerRehab} Dager med spesialisert rehabilitering}
@@ -488,8 +486,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigPermisjon, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
-			traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
+			traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{\label{fig:Permisjon} Antall døgn ute av sykehus}
@@ -501,8 +499,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigUtTil, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='UtTil', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='UtTil', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{Til hvor pasientene skrives ut}
@@ -514,8 +512,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigSkadeArsak, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='SkadeArsak', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='SkadeArsak', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0,hentData=0)
 @
 }
   \caption{Skadeårsak}
@@ -527,8 +525,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigPustehjelp, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='Pustehjelp', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='Pustehjelp', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0, hentData=0)
 @
 }
   \caption{\label{fig:Pustehjelp} Ventilasjonsstøtte}
@@ -540,9 +538,9 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigASIAinn, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='AAis', datoFra=datoFra, datoTil=datoTil,
+	NSFigAndeler(NSdata,   valgtVar='AAis', datoFra=datoFra, datoTil=datoTil,
 			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1,
-      reshID=reshID, sml=sml, hentData=0)
+      reshID=reshID, preprosess=0, hentData=0)
 @
 }
   \caption{\label{fig:AISinn} AIS ved innleggelse}
@@ -555,8 +553,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigASIAut, echo=FALSE>>=
-	NorScir::FigFordeling(NSdata,   valgtVar='FAis', datoFra=datoFra, datoTil=datoTil,
-			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, sml=sml, hentData=0)
+	NSFigAndeler(NSdata,   valgtVar='FAis', datoFra=datoFra, datoTil=datoTil,
+			minald=minald, maxald=maxald, traume=traume, enhetsUtvalg=1, reshID=reshID, preprosess=0, hentData=0)
 @
 }
   \caption{AIS ved utskriving}
@@ -571,9 +569,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigAlderGjsn, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume,
-    hentData=0)
+	FigGjsnGrVar(NSdata, valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0, hentData=0)
 @
 }
   \caption{Gjennomsnittlig alder, totalt og ved hvert sykehus}
@@ -585,9 +582,9 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigAlderMed, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
+	FigGjsnGrVar(NSdata,   valgtVar='Alder', datoFra=datoFra, datoTil=datoTil,
 		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann,
-    traume=traume, hentData=0)
+    traume=traume, preprosess=0, hentData=0)
 @
 }
   \caption{Median alder, totalt og ved hvert sykehus}
@@ -600,9 +597,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerRehabGjsn, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume,
-    hentData=0)
+	FigGjsnGrVar(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0, hentData=0)
 @
 }
   \caption{Gjennomsnittlig antall dager med rehabilitering, totalt og ved hvert sykehus}
@@ -614,9 +610,9 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerRehabMed, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
+	FigGjsnGrVar(NSdata,   valgtVar='DagerRehab', datoFra=datoFra, datoTil=datoTil,
 		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann,
-    traume=traume, hentData=0)
+    traume=traume, preprosess=0, hentData=0)
 @
 }
   \caption{Median antall dager med rehabilitering, totalt og ved hvert sykehus}
@@ -629,9 +625,9 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerTilRehabGjsn, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
+	FigGjsnGrVar(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
 		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume,
-    hentData=0)
+    preprosess=0, hentData=0)
 @
 }
   \caption{Gjennomsnittlig antall dager før rehabilitering, totalt og ved hvert sykehus}
@@ -643,9 +639,9 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigDagerTilRehabMed, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
+	FigGjsnGrVar(NSdata,   valgtVar='DagerTilRehab', datoFra=datoFra, datoTil=datoTil,
 		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann,
-    traume=traume, hentData=0)
+    traume=traume, preprosess=0, hentData=0)
 @
 }
   \caption{Median antall dager før rehabilitering, totalt og ved hvert sykehus}
@@ -657,8 +653,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigPermisjonGjSn, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume,
+	FigGjsnGrVar(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0, 
     hentData=0)
 @
 }
@@ -671,8 +667,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigPermisjonMed, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann,
+	FigGjsnGrVar(NSdata,   valgtVar='Permisjon', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann, preprosess=0, 
     traume=traume, hentData=0)
 @
 }
@@ -686,8 +682,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigOpphTotGjsn, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata,   valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume,
+	FigGjsnGrVar(NSdata,   valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='', minald=minald, maxald=maxald, erMann=erMann, traume=traume, preprosess=0, 
     hentData=0)
 @
 }
@@ -700,8 +696,8 @@ av data til figurene.
 \begin{center}
 \scalebox{\Sexpr{s1}}{
 <<FigOpphTotMed, echo=FALSE>>=
-	NorScir::FigMeanMed(NSdata, valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
-		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann,
+	FigGjsnGrVar(NSdata, valgtVar='OpphTot', datoFra=datoFra, datoTil=datoTil,
+		valgtMaal='Med', minald=minald, maxald=maxald, erMann=erMann, preprosess=0, 
     traume=traume, hentData=0)
 @
 }
