--- a/inst/NSsamleDokLand.Rnw
+++ b/inst/NSsamleDokLand.Rnw
@@ -87,24 +87,25 @@
 \newpage
 
 
-<<"knitrSettings", include=FALSE, echo=FALSE, eval=TRUE>>=
-knitr::opts_knit$set(root.dir='./')
-knitr::opts_chunk$set(fig.align='center', fig.show='hold', out.width='.7\\textwidth',cache=FALSE, fig.path='')
+<<setup, include=FALSE, cache=FALSE>>=
+knitr::opts_chunk$set(warnings=FALSE,echo=FALSE)
+knitr::opts_knit$set(root.dir = './')	#Settes også i rapbase
+knitr::opts_chunk$set(fig.align='center', fig.show='hold', fig.path='', out.width='.7\\textwidth', cache=FALSE)
+options(replace.assign=TRUE, width=90) #, warnings=FALSE, echo=FALSE, fig.align='center', fig.show='hold', out.width='.7\\textwidth', cache=FALSE)
 @
 
 <<"WARNINGLoadSampleDataWARNING", echo=FALSE, eval=FALSE>>=
 #load(NorScirSampleData)
 data(NorScirSampleData, package="NorScir")
 NSdata <- NorScirSampleData
-libkat <- './'
 reshID <- 123456
 @
 
-<<'LasteDataDb', include=FALSE, echo=FALSE, eval=TRUE>>=
-NSdata <- NSLoadRegData()
 
-# may be removed?
-libkat <- './'
+<<LasteData, echo=FALSE, eval=T>>=
+if (!exists('NSdata')){
+      NSdata <- NSRegDataSQL()
+}
 @
 
 
@@ -128,7 +129,6 @@ NSdata$Alder <- NSdata[ ,alderVar]
 ShNavn <- NSdata$ShNavn[which(NSdata$ReshId == reshID)[1]]
 
 #Parametre
-#sml <- 1		#Sammenligne med resten av landet eller ikke. Ikke aktiv når hele landet valgt.
 minald <- 0
 maxald <- 130
 erMann <- ''	#...
@@ -136,16 +136,12 @@ traume <- ''	#'ja','nei', standard: ikke utvalgt (
 AIS <- ''
 datoFra <- '2011-01-01'	#Standard: 0, dvs. alle år
 datoTil <- '2014-12-31'
-#egenavd=0
-#reshID - gis fra Jasper	##105593-Haukeland, 106896-Sunnaas sykehus, 107627-St.Olavs, standard: 'Alle'
-#plotType='S'
 s1 <- 0.8	#Skaleringsparameter for enkeltfigurer
 #s2 <- 0.7	#Skaleringsparameter for "dobbeltfigurer"
 
 #Utvalg/datarensk
 Ninn <- dim(NSdata)[1]
-Utvalg <- NorScir::NSLibUtvalg(RegData=NSdata, datoFra=datoFra,
-                               datoTil=datoTil)
+Utvalg <- NSUtvalg(RegData=NSdata, datoFra=datoFra, datoTil=datoTil)
 NSdata <- Utvalg$RegData
 NSdataEget <- NSdata[NSdata$ReshId == reshID,]
 
@@ -338,35 +334,35 @@ av data til figurene.
 
 
 <<Figurer, echo=FALSE, message=FALSE>>=
-dum <- NorScir::FigAndelStabel(NSdata, libkat=libkat, valgtVar='NevrNivaaInnUt', outfile='FigNevrNivaaInnUt.pdf',
-		datoFra=datoFra, datoTil=datoTil, erMann=erMann, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='Alder', outfile='FigAlder.pdf',
+#dum <- NSNSFigAndelStabel(NSdata, preprosess=0,valgtVar='NevrNivaaInnUt', outfile='FigNevrNivaaInnUt.pdf',
+#		datoFra=datoFra, datoTil=datoTil, erMann=erMann, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
+dum <- NSFigAndeler(NSdata, preprosess=0,valgtVar='Alder', outfile='FigAlder.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='OpphTot', outfile='FigOpphTot.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='OpphTot', outfile='FigOpphTot.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='DagerTilRehab', outfile='FigDagerTilRehab.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='DagerTilRehab', outfile='FigDagerTilRehab.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='DagerRehab', outfile='FigDagerRehab.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='DagerRehab', outfile='FigDagerRehab.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='Permisjon', outfile='FigPermisjon.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='Permisjon', outfile='FigPermisjon.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='UtTil', outfile='FigUtTil.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='UtTil', outfile='FigUtTil.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='SkadeArsak', outfile='FigSkadeArsak.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='SkadeArsak', outfile='FigSkadeArsak.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='Pustehjelp', outfile='FigPustehjelp.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='Pustehjelp', outfile='FigPustehjelp.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='AAis', outfile='FigAISinn.pdf',
+dum <- NSFigAndeler(NSdata, preprosess=0, valgtVar='AAis', outfile='FigAISinn.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
-dum <- 	NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='FAis', outfile='FigAISut.pdf',
+dum <- 	NSFigAndeler(NSdata, preprosess=0, valgtVar='FAis', outfile='FigAISut.pdf',
 		datoFra=datoFra, datoTil=datoTil, traume=traume, enhetsUtvalg=0, reshID=reshID, hentData=0)
 
 @
 
-\begin{figure}[ht]
- \centerline{ \scalebox{\Sexpr{s1}}{\includegraphics{FigNevrNivaaInnUt.pdf}}  }
- \caption{\label{fig:NevrKatInnUtLand} Nevrologisk nivå, alle sykehus.}
-\end{figure}
+%\begin{figure}[ht]
+% \centerline{ \scalebox{\Sexpr{s1}}{\includegraphics{FigNevrNivaaInnUt.pdf}}  }
+% \caption{\label{fig:NevrKatInnUtLand} Nevrologisk nivå, alle sykehus.}
+%\end{figure}
 
 \begin{figure}[ht]
  \centerline{ \scalebox{\Sexpr{s1}}{\includegraphics{FigAlder.pdf}}  }
@@ -424,25 +420,25 @@ dum <- 	NorScir::FigFordeling(NSdata, libkat=libkat, valgtVar='FAis', outfile='F
 
 
 <<Figurer2, echo=FALSE, message=FALSE>>=
-dum <- 	NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='Alder', outfile='FigAlderGjsn.pdf',
+dum <- 	NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='Alder', outfile='FigAlderGjsn.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='', erMann=erMann, traume=traume, hentData=0)
-dum <- 	NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='Alder', outfile='FigAlderMed.pdf',
+dum <- 	NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='Alder', outfile='FigAlderMed.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='Med', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='DagerRehab', outfile='FigDagerRehabGjsn.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='DagerRehab', outfile='FigDagerRehabGjsn.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='DagerRehab', outfile='FigDagerRehabMed.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='DagerRehab', outfile='FigDagerRehabMed.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='Med', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='DagerTilRehab', outfile='FigDagerTilRehabGjsn.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='DagerTilRehab', outfile='FigDagerTilRehabGjsn.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='DagerTilRehab', outfile='FigDagerTilRehabMed.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='DagerTilRehab', outfile='FigDagerTilRehabMed.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='Med', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='Permisjon', outfile='FigPermisjonGjSn.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='Permisjon', outfile='FigPermisjonGjSn.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='Permisjon', outfile='FigPermisjonMed.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='Permisjon', outfile='FigPermisjonMed.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='Med', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='OpphTot', outfile='FigOpphTotGjsn.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='OpphTot', outfile='FigOpphTotGjsn.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='', erMann=erMann, traume=traume, hentData=0)
-dum <- NorScir::FigMeanMed(NSdata, libkat=libkat, valgtVar='OpphTot', outfile='FigOpphTotMed.pdf',
+dum <- NSFigGjsnGrVar(NSdata, preprosess=0, valgtVar='OpphTot', outfile='FigOpphTotMed.pdf',
 		datoFra=datoFra, datoTil=datoTil, valgtMaal='Med', erMann=erMann, traume=traume, hentData=0)
 
 @
