--- a/inst/NSsamleRapp.Rnw
+++ b/inst/NSsamleRapp.Rnw
@@ -96,9 +96,9 @@ options(replace.assign=TRUE, width=90) #, warnings=FALSE, echo=FALSE, fig.align=
 %@
 
 <<LasteData, echo=FALSE, eval=T>>=
-#if (!exists('NSdata')){
+if (!exists('NSdata')){
       NSdata <- nordicscir::NSRegDataSQL()
-#}
+}
 @
 
 
